@@ -34,9 +34,15 @@ import java.time.Year;
 import java.time.format.TextStyle;
 import java.time.temporal.TemporalAdjuster;
 import java.time.temporal.TemporalAdjusters;
-import java.util.*;
+import java.util.ArrayList;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Locale;
+import java.util.Map;
+import java.util.Optional;
 import java.util.function.Function;
 import java.util.function.Supplier;
+import java.util.stream.Collectors;
 
 import static java.lang.Integer.parseInt;
 import static java.time.DayOfWeek.SATURDAY;
@@ -47,7 +53,11 @@ import static java.util.stream.Collectors.toCollection;
 import static java.util.stream.Collectors.toList;
 import static java.util.stream.Collectors.toMap;
 import static org.springframework.util.StringUtils.hasText;
-import static org.synyx.urlaubsverwaltung.person.Role.*;
+import static org.synyx.urlaubsverwaltung.person.Role.BOSS;
+import static org.synyx.urlaubsverwaltung.person.Role.DEPARTMENT_HEAD;
+import static org.synyx.urlaubsverwaltung.person.Role.INACTIVE;
+import static org.synyx.urlaubsverwaltung.person.Role.OFFICE;
+import static org.synyx.urlaubsverwaltung.person.Role.SECOND_STAGE_AUTHORITY;
 
 @RequestMapping("/web/absences")
 @Controller
@@ -154,27 +164,25 @@ public class AbsenceOverviewViewController implements HasLaunchpad {
         return "absences/absences-overview";
     }
 
-    private List<VacationTypeColorDto> prepareVacationTypeColorsForLegend(
-        boolean isSignedInUserAllowedToSeeAbsences,
-        boolean isSignedInUserInOverview,
-        List<VacationType<?>> vacationTypes,
-        Locale locale) {
+    private List<VacationTypeColorDto> prepareVacationTypeColorsForLegend(boolean isSignedInUserAllowedToSeeAbsences, boolean isSignedInUserInOverview, List<VacationType<?>> vacationTypes, Locale locale) {
 
-        Function<VacationType<?>, VacationTypeColorDto> toDto = vacationType -> toVacationTypeColorsDto(vacationType,
-            locale);
-        List<VacationType<?>> activeVacationTypes =
-            vacationTypes.stream().filter(VacationType::isActive).toList();
-        List<VacationTypeColorDto> vacationTypeColorDtos = new ArrayList<>();
+        List<VacationTypeColorDto> vacationTypeColorDtos;
 
-        if (isSignedInUserAllowedToSeeAbsences || isSignedInUserInOverview) {
-            vacationTypeColorDtos.addAll(activeVacationTypes.stream().map(toDto).toList());
+        final Function<VacationType<?>, VacationTypeColorDto> toVacationTypeColorsDto = vacationType -> toVacationTypeColorsDto(vacationType, locale);
+        final List<VacationType<?>> activeVacationTypes = vacationTypes.stream().filter(VacationType::isActive).toList();
+
+        if (isSignedInUserAllowedToSeeAbsences) {
+            vacationTypeColorDtos = activeVacationTypes.stream().map(toVacationTypeColorsDto).toList();
         } else {
-            vacationTypeColorDtos.addAll(activeVacationTypes.stream().filter(VacationType::isVisibleToEveryone).map(toDto).toList());
+            if (isSignedInUserInOverview) {
+                vacationTypeColorDtos = activeVacationTypes.stream().map(toVacationTypeColorsDto).collect(Collectors.toList());
+            } else {
+                vacationTypeColorDtos = activeVacationTypes.stream().filter(VacationType::isVisibleToEveryone).map(toVacationTypeColorsDto).collect(Collectors.toList());
+            }
             if (activeVacationTypes.stream().anyMatch(vacationType -> !vacationType.isVisibleToEveryone())) {
                 vacationTypeColorDtos.add(getAnonymizedAbsenceTypeColor(locale));
             }
         }
-
         return vacationTypeColorDtos;
     }
 
